--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,9 +11,11 @@
     <ListView
         android:id="@+id/chatList"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/chat_box"
         android:layout_marginTop="20dp"
-        android:background="#CCCCCC"></ListView>
+        android:divider="@null"
+        android:dividerHeight="0dp"></ListView>
 
 
     <Button
@@ -25,7 +27,7 @@
         android:text="@string/buttontext" />
 
     <EditText
-        android:id="@+id/etMensaje"
+        android:id="@+id/chat_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
