--- a/app/src/main/res/layout/activity_users_list.xml
+++ b/app/src/main/res/layout/activity_users_list.xml
@@ -8,44 +8,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ChooseUserActivity">
 
-    <TextView
-        android:id="@+id/tittleLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Choose user"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/buttonLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tittleLogin"
-        android:layout_below="@+id/tittleLogin"
-        android:layout_marginTop="68dp"
-        android:gravity="center"
-        android:text="login"
-        android:visibility="gone" />
-
-    <Spinner
-        android:id="@+id/spinnerUsers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tittleLogin"
-        android:layout_below="@+id/tittleLogin"
-        android:visibility="gone" />
 
     <ListView
         android:id="@+id/users_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="#F0EFED"
-        android:dividerHeight="1dp"
+        android:dividerHeight="0dp"
+        android:divider="@null"
         android:drawSelectorOnTop="true"
         android:footerDividersEnabled="false"
         android:scrollbarStyle="outsideInset"></ListView>
-
-
 
 
 </RelativeLayout>
